# Matrix-Multiplication-Acceleration

./: .gitignore  CMakeLists.txt  LICENSE  README.md  joinable_threads.c  processes.c
src/: detached_threads.c
